[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/ugly_mech.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UglyMech.gd" type="Script" id=2]
[ext_resource path="res://Assets/animated/shield_barrier.png" type="Texture" id=3]
[ext_resource path="res://Assets/animated/Shielding.anim" type="Animation" id=4]
[ext_resource path="res://Assets/animated/Hurt.anim" type="Animation" id=5]
[ext_resource path="res://Assets/styles/ShieldCapBarFG.stylebox" type="StyleBox" id=6]
[ext_resource path="res://Assets/styles/BarsBG.stylebox" type="StyleBox" id=7]
[ext_resource path="res://Assets/styles/HealthBarFG.stylebox" type="StyleBox" id=8]
[ext_resource path="res://Assets/fonts/PixelFJVerdana12pt.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/MechExplosions.ogg" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "flying",
"speed": 15.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 100, 100 )

[sub_resource type="RectangleShape2D" id=8]
resource_local_to_scene = true
extents = Vector2( 80, 110 )

[sub_resource type="CircleShape2D" id=9]
resource_local_to_scene = true
radius = 55.0

[sub_resource type="RectangleShape2D" id=10]
resource_local_to_scene = true
extents = Vector2( 90, 60 )

[sub_resource type="DynamicFont" id=11]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0.195205, 0.383562, 0.609589, 0.931507 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.596078, 0, 0.784314, 1, 0.937255, 0, 0.470588, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 2
emission_box_extents = Vector3( 100, 100, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 50.0
scale_random = 1.0
color_ramp = SubResource( 15 )

[sub_resource type="Animation" id=12]
resource_name = "Destroyed"
length = 6.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:one_shot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BossLayer/BossBars:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.5, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimGraphic:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 6, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ShieldBarrier:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:one_shot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimGraphic:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BossLayer/BossBars:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ShieldBarrier:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 11 ]
}

[node name="UglyMech" type="KinematicBody2D" groups=["Entities", "Mechs"]]
z_index = 2
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimGraphic" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
animation = "flying"
frame = 4
playing = true

[node name="Col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ChangePathTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="MissilePods" type="Node2D" parent="."]

[node name="1" type="Position2D" parent="MissilePods"]
position = Vector2( -36, 36 )

[node name="2" type="Position2D" parent="MissilePods"]
position = Vector2( 0, 36 )

[node name="3" type="Position2D" parent="MissilePods"]
position = Vector2( 36, 36 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="Col" type="CollisionShape2D" parent="HitBox"]
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 8 )

[node name="HurtBox" type="Area2D" parent="." groups=["Entities", "Mechs"]]
visible = false
position = Vector2( 0, -65 )
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="Col" type="CollisionShape2D" parent="HurtBox"]
self_modulate = Color( 0.313726, 1, 0, 1 )
shape = SubResource( 9 )

[node name="Blocker" type="Area2D" parent="." groups=["Blockers"]]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="Col" type="CollisionShape2D" parent="Blocker"]
self_modulate = Color( 1, 0, 0.796078, 1 )
position = Vector2( 0, 50 )
shape = SubResource( 10 )

[node name="ShieldBarrier" type="Sprite" parent="."]
unique_name_in_owner = true
scale = Vector2( 3.25, 3.5 )
z_index = 4
texture = ExtResource( 3 )
hframes = 6
vframes = 2
frame = 11

[node name="RechargeDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="BossLayer" type="CanvasLayer" parent="."]

[node name="BossBars" type="Control" parent="BossLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -200.0
margin_right = 640.0
rect_min_size = Vector2( 0, 200 )

[node name="Lbl" type="Label" parent="BossLayer/BossBars"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
custom_fonts/font = SubResource( 11 )
text = "Mech:"
align = 1
valign = 1

[node name="HealthBar" type="ProgressBar" parent="BossLayer/BossBars"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -550.0
margin_top = -80.0
margin_right = 550.0
margin_bottom = -40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/fg = ExtResource( 8 )
custom_styles/bg = ExtResource( 7 )
max_value = 1000.0
step = 1.0
value = 450.0
percent_visible = false

[node name="ShieldCapBar" type="ProgressBar" parent="BossLayer/BossBars"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -550.0
margin_top = -40.0
margin_right = 550.0
rect_min_size = Vector2( 0, 40 )
custom_styles/fg = ExtResource( 6 )
custom_styles/bg = ExtResource( 7 )
max_value = 1000.0
step = 1.0
value = 780.0
percent_visible = false

[node name="Explosion" type="Particles2D" parent="."]
emitting = false
amount = 150
randomness = 1.0
process_material = SubResource( 16 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/Destroyed = SubResource( 12 )
anims/Hurt = ExtResource( 5 )
anims/RESET = SubResource( 13 )
anims/Shielding = ExtResource( 4 )

[node name="DestroyingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[connection signal="timeout" from="ChangePathTimer" to="." method="_on_ChangePathTimer_timeout"]
[connection signal="animation_finished" from="AnimPlayer" to="." method="_on_AnimPlayer_animation_finished"]
